# encoder-decoder

./: Base64.pptx  CMakeLists.txt  README.md  SHA 256.pptx
SketchCmake/: CMakeLists.txt  Conversores.h  SketchCmake.cpp  SketchCmake.h
